--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,4 +1,23 @@
+body{
+    background-color: #4b1e09de;
+    font-size: 2.5em;
+}
 #upper-border {
     padding: 50px;
     margin: 50px;
+}
+#end-result {
+    color: red;
+    font-family: comic sans ms;
+
+}
+#bt1, #bt3 {
+    font-size: .6em;
+    background-color: white;
+    color: orange;
+}
+#bt2, #bt4 {
+    font-size: .6em;
+    background-color: orange;
+    color: white;
 }
