--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,46 +1,88 @@
 body{
+    background-image: url("../images/trivia-background.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
     background-color: #4b1e09de;
     font-size: 2.5em;
 }
 #upper-border {
     padding: 50px;
     margin: 50px;
+    background: #b9b9b9ea;
 }
 #end-result {
     color: red;
     font-family: comic sans ms;
 }
 #changing-question {
-    color: brown;
+    color: black;
 }
 #topRow {
     color: orange;
-    font-size: 150%; 
+    font-size: 200%; 
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-shadow: 
+    -1px -1px 0 #000,
+    1px -5px 0 rgb(24, 3, 141),
+    -1px 3px 0 #000,
+    5px 4px 0 #000;
 }
-#bt1, #bt3 {
-    font-size: .8em;
+#topRowmini{
+    font-size: 40%;
+}
+#timer {
+    font-size: 3em;
+    color: #002df8;
+}
+#bt1, #bt3,  {
+    font-size: .6em;
     background-color: white;
     color: orange;
-    margin-right: 200px;
     border: 2px solid orange;
+    padding: 10px;
+    margin: 5px;
 }
+#bt2:hover, #bt4:hover, #bt1:hover, #bt3:hover, #restart:hover, #reset:hover {
+    border: 5px solid blue;
+    background: grey;
+    color: white;
+}
+
 #bt2, #bt4 {
-    font-size: .5em;
+    font-size: .6em;
     background-color: orange;
     color: white;
-    height: 60px;
-    min-width: 110%;
     border: 2px solid white;
+    margin: 5px;
+    padding: 10px;
 }
 #reset, #restart {
     font-size: .6em;
     width: 49%;
 }
-#reset { 
+#reset{ 
     color: white;
     background: orange;
 }
 #restart { 
     color: orange;
     background: white;
+}
+.ab-pos {
+    position: absolute;
+    z-index: 21000;
+}
+img {
+    width: 300px;
+    height: 300px;
+}
+#nerd2{
+    margin-left: 700px;
+    position: absolute;
+    z-index: 5;
+}
+#nerd3{
+    position: absolute;
+    z-index: 10;
+    margin-left: 120px;
 }
